# AMToDo

./: .gitignore  README.md  alembic.ini  capacitor.config.json  package-lock.json  pyproject.toml
alembic/: env.py
alembic/versions/: 001_initial_schema.py  002_add_notification_tables.py
config/: cli.toml  server.toml  ui.toml
frontend/: README.md  capacitor.config.ts  index.html  mobile.html  package-lock.json  package.json  vite.config.ts
frontend/android/app/: build.gradle
frontend/design-demos/: todo-today-hero-options.html
frontend/electron/: main.cjs  preload.cjs
frontend/scripts/: generate-file-icon-map.py  patch-desktop-icon.cjs  zip-desktop.cjs
frontend/src/: App.tsx  config.ts  main-mobile.tsx  main.tsx  styles.css  vite-env.d.ts
frontend/src/api/: client.ts  connection-status.ts  ws-client.ts
frontend/src/crypto/: envelope.ts
frontend/src/hooks/: useAppCore.ts  useGlassTooltip.tsx
frontend/src/i18n/: en.ts  index.tsx  zh-CN.ts
frontend/src/layout/: DesktopLayout.tsx  MobileLayout.tsx
frontend/src/lib/: attachmentCache.ts  attachmentDiskCache.ts  background-ws.ts  captureTempMediaCache.ts  chunked-download.ts  chunked-upload.ts  desktopAttachmentCache.ts  file-icon-map.ts  mime-types.ts  native-attachment.ts  settings.ts  stream-crypto.ts  time.ts
frontend/src/mobile/: App.tsx  statusBar.ts
frontend/src/shell/: index.ts
frontend/src/styles/: changelog.css  components.css  connection-error.css  global.css  index.css  modals.css  notify.css  schedule.css  search.css  todo.css  tokens.css  trash.css
frontend/src/themes/: index.ts  types.ts  warm-light.json
frontend/src/views/: CalendarPopup.tsx  ChangelogPanel.tsx  ConfirmDialog.tsx  ContextMenu.tsx  (+21 more)
nginx/: amtodo.reverse-proxy.conf.template
scripts/: migrate_extra_fields.py
server/: config.toml
skills/amtodo-todo/: SKILL.md
src/: cli.py  clock.py  config.py  dates.py  exceptions.py  serialization.py
src/amtodo_crypto/: __init__.py  envelope.py  keys.py  replay.py  session.py
src/client/: __init__.py  attachment_cache.py  http.py
src/db/: base.py  engine.py
src/models/: __init__.py  attachment.py  changelog.py  factory.py  notification.py  notification_mention.py  schedule.py  schedule_attachment.py  setting.py  todo.py  user.py
src/repositories/: __init__.py  attachments.py  changelogs.py  notifications.py  schedules.py  settings.py  todos.py
src/server/: admin.py  app.py  attachment_helpers.py  attachment_routes.py  auth.py  common.py  deps.py  notification_ws.py  notifications.py  proxy.py  rate_limit.py  schedules.py  schemas.py  todos.py  trash.py  ui_ws.py  ui_ws_handler.py  ui_ws_schema.py  users.py  websocket_manager.py
src/services/: __init__.py  attachments.py  changelogs.py  context.py  notifications.py  schedules.py  search_common.py  todos.py  uow.py  upload_tokens.py
src/ui/: app.py  schedule_view.py  settings.py  todo_view.py
tests/: conftest.py  test_attachments.py  test_client.py  test_crypto.py  test_database.py  test_encryption.py  test_https_proxy.py  test_imports.py  test_schedules.py  test_server_schedules.py  test_server_search.py  test_server_todos.py  test_todos.py  test_ui_imports.py
(+57 files in other folders)
