[project]
name = "amtodo"
version = "0.1.0"
description = "A desktop scheduling and planning application."
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [
  { name = "AMToDo contributors" },
]
dependencies = [
  "fastapi>=0.115",
  "hypercorn>=0.17",
  "httpx>=0.28",
  "python-multipart>=0.0.20",
  "sqlalchemy>=2.0",
  "typer>=0.15",
  "tzdata>=2025.2; platform_system == 'Windows'",
  "uvicorn[standard]>=0.34",
]

[project.scripts]
amtodo = "cli:main"
amtodo-server = "server.app:main"

[dependency-groups]
dev = [
  "pytest>=8.0",
  "ruff>=0.8",
]

[build-system]
requires = ["hatchling>=1.26"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
only-include = []
force-include = { "src/cli.py" = "cli.py", "src/clock.py" = "clock.py", "src/config.py" = "config.py", "src/dates.py" = "dates.py", "src/exceptions.py" = "exceptions.py", "src/serialization.py" = "serialization.py", "src/client" = "client", "src/db" = "db", "src/models" = "models", "src/repositories" = "repositories", "src/server" = "server", "src/services" = "services" }

[tool.hatch.build.targets.sdist]
include = [
  "/README.md",
  "/pyproject.toml",
  "/src",
]
force-include = { "src/db" = "src/db" }

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ANN", "RUF"]

[[tool.uv.index]]
url = "https://repo.huaweicloud.com/repository/pypi/simple"
default = true
